--- a/client/src/app/components/genes/gene-tag/gene-tag.component.html
+++ b/client/src/app/components/genes/gene-tag/gene-tag.component.html
@@ -24,8 +24,8 @@
 
 <ng-template #tagContent>
   <cvc-icon-badges [hasComments]="false"
-    [hasRevisions]="0.2 | devRandomBool"
-    [hasFlags]="0.1 | devRandomBool"
+    [hasRevisions]="0.4 | devRandomBool"
+    [flagged]="0.1 | devRandomBool"
     [entityColor]="iconColor">
     <i nz-icon
       nzType="civic-gene"
