updated gene-tag, gene-table w/ entityColor & icon-badges

--- a/client/src/app/components/genes/gene-tag/gene-tag.component.html
+++ b/client/src/app/components/genes/gene-tag/gene-tag.component.html
@@ -23,9 +23,8 @@
 </ng-template>
 
 <ng-template #tagContent>
-  <cvc-icon-badges [hasComments]="false"
-    [hasRevisions]="0.4 | devRandomBool"
-    [flagged]="0.1 | devRandomBool"
+  <cvc-icon-badges
+    [flagged]="gene.flagged"
     [entityColor]="iconColor">
     <i nz-icon
       nzType="civic-gene"
