--- a/client/src/app/components/genes/gene-tag/gene-tag.component.html
+++ b/client/src/app/components/genes/gene-tag/gene-tag.component.html
@@ -29,7 +29,7 @@
     <i nz-icon
       nzType="civic-gene"
       nzTheme="twotone"
-      nzTwotoneColor="#07AFF0"></i>
+      [nzTwotoneColor]="'Gene' | entityColor"></i>
   </cvc-icon-badges>
   <!-- gene name length mean: 8; mode: 12 (15306); max: 25 -->
   <ng-container *ngIf="this.truncateLongName; else fullName">
