--- a/client/src/app/forms/config/types/gene-input/gene-input.type.html
+++ b/client/src/app/forms/config/types/gene-input/gene-input.type.html
@@ -1,6 +1,7 @@
 <ng-container *ngIf="!formControl.value?.id; else geneListItem">
   <nz-select #focusInput nzShowSearch
     nzServerSearch
+    style="width: 300px;"
     autofocus="click"
     [formControl]="formControl"
     [formlyAttributes]="field"
