--- a/client/src/app/views/genes/genes-home/genes-home.page.html
+++ b/client/src/app/views/genes/genes-home/genes-home.page.html
@@ -12,7 +12,7 @@
           [nzTwotoneColor]="'Gene' | entityColor"
           nzType="civic-gene"></i>
       </nz-col>
-      <nz-col nzFlex="600px"
+      <nz-col nzFlex="0 1 600px"
         class="header-description">
         <h2>Genes</h2>
         <p nz-typography
