--- a/client/src/app/forms2/types/gene-select/gene-select.type.html
+++ b/client/src/app/forms2/types/gene-select/gene-select.type.html
@@ -4,6 +4,7 @@
   [cvcCustomTemplate]="selectedTemplate"
   [cvcFormControl]="formControl"
   [cvcFormlyAttributes]="field"
+  [cvcPlaceholder]="(placeholder$ | ngrxPush)!"
   [cvcEntityName]="props.entityName"
   [cvcResults]="result$ | ngrxPush"
   [cvcOptions]="selectOption$ | ngrxPush"
@@ -15,7 +16,7 @@
 
 <!-- select option templates -->
 <!-- result$ updates generate an array of #optionTemplates. entity-tag-field.mixin watches #optionTemplates changes, and attaches each to an NzSelectOptionTemplateInterface an object, which are emitted from selectOption$. selectOption$ is passed to <cvc-entity-select> via [cvcOptions] above -->
-<ng-container *ngrxLet="onHighlightString$ as searchString">
+<ng-container *ngrxLet="onSearch$ as searchString">
   <ng-container *ngFor="let result of result$ | ngrxPush; index as i">
     <ng-template #optionTemplates>
       <cvc-entity-tag
