fix mygeneinfo box not loading

--- a/client/src/app/views/genes/genes-detail/genes-summary/genes-summary.page.html
+++ b/client/src/app/views/genes/genes-detail/genes-summary/genes-summary.page.html
@@ -96,7 +96,7 @@
     <!-- last revision submitted/accepted, mygeneinfo col -->
     <nz-col nzSpan="12">
       <!-- mygeneinfo -->
-      <cvc-my-gene-info [geneInfo]="myGeneInfo$ | ngrxPush"></cvc-my-gene-info>
+      <cvc-my-gene-info [geneInfo]="gene.myGeneInfoDetails"></cvc-my-gene-info>
     </nz-col>
 
     <!-- variant menu row -->
