--- a/client/src/app/forms2/types/gene-select/gene-select.type.html
+++ b/client/src/app/forms2/types/gene-select/gene-select.type.html
@@ -12,6 +12,7 @@
   [cvcLoading]="isLoading$ | ngrxPush"
   (cvcOnSearch)="onSearch$.next($event)"
   (cvcOnOpenChange)="onOpenChange$.next($event)"
+  (cvcSelectComponent)="selectComponent = $event"
   (cvcOnModelChange)="props.change && props.change(field, $event)">
 </cvc-entity-select>
 
