update link format to protein paint

--- a/client/src/app/views/genes/genes-detail/genes-summary/genes-summary.page.html
+++ b/client/src/app/views/genes/genes-detail/genes-summary/genes-summary.page.html
@@ -82,7 +82,7 @@
                   DGIdb
                 </cvc-link-tag>
                 <cvc-link-tag
-                  [href]="'https://pecan.stjude.cloud/proteinpaint/' + gene.name + '/hg19/civic'"
+                  [href]="'https://pecan.stjude.cloud/variants/protein-paint/?gene=' + gene.name"
                   [tooltip]="'View ' + gene.name + ' on ProteinPaint'">
                   ProteinPaint
                 </cvc-link-tag>
