update dgidb linkout

--- a/client/src/app/views/genes/genes-detail/genes-summary/genes-summary.page.html
+++ b/client/src/app/views/genes/genes-detail/genes-summary/genes-summary.page.html
@@ -77,7 +77,7 @@
             <nz-descriptions-item nzTitle="Resources">
               <cvc-tag-list>
                 <cvc-link-tag
-                  [href]="'http://dgidb.org/genes/' + gene.name"
+                  [href]="'https://dgidb.org/results?searchType=gene&searchTerms=' + gene.name"
                   [tooltip]="'View ' + gene.name + ' on DGIdb'">
                   DGIdb
                 </cvc-link-tag>
