--- a/client/src/app/components/genes/gene-popover/gene-popover.component.html
+++ b/client/src/app/components/genes/gene-popover/gene-popover.component.html
@@ -10,7 +10,7 @@
           nzTheme="twotone"
           [nzTwotoneColor]="'Gene' | entityColor"
           nzType="civic-gene"></i>
-        {{ gene.officialName }}
+        {{ gene.fullName }}
       </ng-template>
 
       <nz-descriptions
