--- a/client/src/app/views/features/features-revise/features-revise.view.html
+++ b/client/src/app/views/features/features-revise/features-revise.view.html
@@ -14,7 +14,7 @@
     </nz-page-header-title>
 
     <!-- subtitle -->
-    <nz-page-header-subtitle> {{ gene.officialName }} </nz-page-header-subtitle>
+    <nz-page-header-subtitle> {{ gene.fullName }} </nz-page-header-subtitle>
 
     <nz-page-header-content>
       <div class="content">
