--- a/client/src/app/views/genes/genes-detail/genes-detail.view.html
+++ b/client/src/app/views/genes/genes-detail/genes-detail.view.html
@@ -17,9 +17,7 @@
       </nz-page-header-title>
 
       <!-- subtitle -->
-      <nz-page-header-subtitle>
-        {{ gene.officialName }}
-      </nz-page-header-subtitle>
+      <nz-page-header-subtitle> {{ gene.fullName }} </nz-page-header-subtitle>
 
       <!-- header action btns, actions menu -->
       <nz-page-header-extra *ngrxLet="viewer$ as viewer">
