begin porting gene select to feature select. variant quick add also working with features

--- a/client/src/app/forms/types/gene-select/gene-select.type.html
+++ b/client/src/app/forms/types/gene-select/gene-select.type.html
@@ -55,7 +55,7 @@
   let-selected>
   <div class="ant-select-selection-item-content">
     <cvc-entity-tag
-      [cvcCacheId]="'Gene:' + selected.nzValue"
+      [cvcCacheId]="'Feature:' + selected.nzValue"
       [cvcContext]="props.isMultiSelect ? 'multi-select-item' : 'select-item'"
       [cvcMode]="props.isMultiSelect ? 'default' : 'closeable'"
       (cvcOnClose)="onTagClose$.next(selected.nzValue)"></cvc-entity-tag>
